--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,7 @@ nav ul li a:hover::after{
 }
 .work img{
     width: 100%;
+    height: 80%;
     border-radius: 3%;
     display: block;
     transition: transform 0.5s;
